# vllm-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: agent_loop.py  deployment_assistant_demo.py  deployment_example.py  server_integration.py
skills/vllm-bench-serve/: SKILL.md
skills/vllm-deploy/: SKILL.md
skills/vllm-deploy-docker/: SKILL.md
skills/vllm-deploy-simple/: SKILL.md
skills/vllm-deploy-simple/scripts/: quickstart.sh
skills/vllm-deploy/scripts/: __init__.py  vllm_deploy.py
tests/: test_core.py  test_deployment_skill.py
vllm_skills/: __init__.py  client.py
vllm_skills/core/: __init__.py  base.py  registry.py  sandbox.py
vllm_skills/vllm_utils/: __init__.py  templates.py  warmup.py
